# entropy-qpu

./: README.md  pyproject.toml
entropylab_qpudb/: _qpudatabase.py
entropylab_qpudb/tests/: test_qpudatabase.py
