[tool.poetry]
name = "entropylab-qpudb"
version = "0.0.11"
description = "A extension of entropy lab for persistent storage of calibration parameters of a quantum processing unit (QPU)."
authors = [
    "Lior Ella <lior@quantum-machines.co>",
    "Guy Kerem <guy@quantum-machines.co>",
    "Tal Shani <tal@quantum-machines.co>"
]
license = "BSD-3-Clause"
packages = [{include = "entropylab_qpudb"}]
include = ["CHANGELOG.md", "LICENSE"]
exclude = ["**/tests/**"]
readme = "README.md"
homepage = "https://github.com/entropy-lab/entropy-qpu"

[tool.poetry.dependencies]
python = "^3.9"
ZODB = "^5.8.1"
pandas = "^2.0.3"
entropylab = {git = "https://github.com/PainterQubits/entropy.git", rev = "v0.1.2-with-sqlalchemy-2.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
poethepoet = "^0.21.1"
pytest = "^7.4.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
pytest-cov = "^4.1.0"

[tool.poe.tasks.format]
cmd = "black entropylab_qpudb"
help = "Format source files according to the style rules"

[tool.poe.tasks.check-format]
cmd = "black entropylab_qpudb --check"
help = "Check that all files are formatted according to the style rules"

[tool.poe.tasks.lint]
cmd = "flake8 entropylab_qpudb"
help = "Check for lint errors"

[tool.poe.tasks.test]
cmd = "pytest"
help = "Run all unit tests"

[tool.poe.tasks]
check = ["check-format", "lint", "test"]

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
