[tool.poetry]
name = "entropylab-qpudb"
version = "0.0.14"
description = "A extension of entropy lab for persistent storage of calibration parameters of a quantum processing unit (QPU)."
authors = [
    "Lior Ella <lior@quantum-machines.co>",
    "Guy Kerem <guy@quantum-machines.co>",
    "Tal Shani <tal@quantum-machines.co>",
]
license = "BSD-3-Clause"
packages = [{ include = "entropylab_qpudb" }]
include = ["CHANGELOG.md", "LICENSE"]
exclude = ["**/tests/**"]
readme = "README.md"
homepage = "https://github.com/entropy-lab/entropy-qpu"

[tool.poetry.dependencies]
python = "^3.9"
zodb = "^6.0"
pandas = "^2.2.2"
entropylab = { git = "https://github.com/PainterQubits/entropylab" }
tqdm = "^4.66.4"
paramdb = "^0.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
poethepoet = "^0.26.1"
pytest = "^8.2.1"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"
pytest-cov = "^5.0.0"

[tool.poe.tasks.format]
cmd = "black entropylab_qpudb"
help = "Format source files according to the style rules"

[tool.poe.tasks.check-format]
cmd = "black entropylab_qpudb --check"
help = "Check that all files are formatted according to the style rules"

[tool.poe.tasks.lint]
cmd = "flake8 entropylab_qpudb"
help = "Check for lint errors"

[tool.poe.tasks.test]
cmd = "pytest"
help = "Run all unit tests"

[tool.poe.tasks]
check = ["check-format", "lint", "test"]

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
